<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/inst3">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:textColor="@android:color/white"
            android:text="@string/eval2"
            android:textSize="45sp"

            android:textStyle="bold|italic"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:text="@string/FMStest"
            android:textSize="40dp"
            android:textStyle="italic"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/fmsSteps1"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:textStyle="italic"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/fmsSteps2"
            android:textColor="@android:color/white"
            android:textSize="27dp"
            android:textStyle="italic"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/method"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/fmsSteps3"
            android:textColor="@android:color/white"
            android:textSize="27dp" />

        <ImageView
            android:layout_width="526dp"
            android:layout_height="324dp"
            android:src="@drawable/inst_fms1"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="left"
            android:text="@string/fmsSteps4"
            android:textColor="@android:color/white"
            android:textSize="27dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/result"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/fmsSteps5"
            android:textColor="@android:color/white"
            android:textSize="27dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/fmsSteps6"
            android:textColor="@android:color/white"
            android:textSize="27dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/fmsSteps7"
            android:textColor="@android:color/white"
            android:textSize="27dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="left"
            android:text="@string/fmsSteps8"
            android:textColor="@android:color/white"
            android:textSize="27dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/conclusion"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/fmsSteps9"
            android:textColor="@android:color/white"
            android:textSize="27dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/fmsSteps10"
            android:textColor="@android:color/white"
            android:textSize="27dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/fmsSteps11"
            android:textColor="@android:color/white"
            android:textSize="27dp" />

        <ImageView
            android:layout_width="526dp"
            android:layout_height="324dp"
            android:src="@drawable/inst_fms2"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="60dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/fmsCompEx"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

    </LinearLayout>


</ScrollView>