<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/inst2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:textColor="@android:color/white"
            android:text="@string/eval1"
            android:textSize="45sp"

            android:textStyle="bold|italic"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:text="@string/trenTest"
            android:textSize="40dp"
            android:textStyle="italic"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:text="@string/trenExpl"
            android:textSize="30dp"
            android:textStyle="italic"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="526dp"
            android:layout_height="324dp"
            android:src="@drawable/inst_trendelenberg"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/method"
            android:textColor="@android:color/white"
            android:textSize="27dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/trenSteps1"
            android:textColor="@android:color/white"
            android:textSize="27dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/trenSteps2"
            android:textColor="@android:color/white"
            android:textSize="27dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/trenSteps5"
            android:textColor="@android:color/white"
            android:textSize="27dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/result"
            android:textColor="@android:color/white"
            android:textSize="27dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/trenSteps3"
            android:textColor="@android:color/white"
            android:textSize="27dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/trenSteps4"
            android:textColor="@android:color/white"
            android:textSize="27dp" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/conclusion"
            android:textColor="@android:color/white"
            android:textSize="27dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/trenSteps6"
            android:textColor="@android:color/white"
            android:textSize="27dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="60dp"
            android:layout_gravity="left"
            android:text="@string/trenSteps7"
            android:textColor="@android:color/white"
            android:textSize="27dp"
            android:textAlignment="center"/>

    </LinearLayout>


</ScrollView>