<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/inst9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:textColor="@android:color/white"
            android:text="@string/setup4"
            android:textSize="45sp"

            android:textStyle="bold|italic"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:text="@string/emgPlacement"
            android:textSize="40dp"
            android:textStyle="italic"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/calf"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:src="@drawable/inst_gastro_ex"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:text="@string/acc4"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="27dp" />


    </LinearLayout>


</RelativeLayout>